# pyCGNS

./: meson_options.txt
.github/workflows/: package.yml  python-publish.yml
CGNS/: meson.build
CGNS/MAP/: meson.build
